Custom lider directive

--- a/app/index.html
+++ b/app/index.html
@@ -13,12 +13,13 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/src/loading-bar.css" />
-    <link rel="stylesheet" href="bower_components/chosen/chosen.css" />
     <!-- endbower -->
+    <link rel="stylesheet" href="bower_components/chosen/chosen.css" />
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/jordan_network.css">
+    <link rel="stylesheet" href="scripts/components/slider/slider.css">
     <!-- endbuild -->
   </head>
   <body ng-app="lrSpaApp">
@@ -52,9 +53,9 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
-    <script src="bower_components/chosen/chosen.jquery.js"></script>
     <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
     <!-- endbower -->
+    <script src="bower_components/chosen/chosen.jquery.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -62,6 +63,7 @@
         <script src="scripts/jordan_network.js"></script>
         <script src="scripts/riken.d3js.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/components/slider/slider-directive.js"></script>
         <!-- endbuild -->
 </body>
 </html>
