WIP, refactoring, better edges

--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="bower_components/chosen/chosen.css" />
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/jordan_network.css">
+    <link rel="stylesheet" href="scripts/components/ui/main.css">
+    <link rel="stylesheet" href="scripts/components/jordan_network/chart.css">
     <link rel="stylesheet" href="scripts/components/slider/slider.css">
     <!-- endbuild -->
   </head>
@@ -28,7 +28,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container-fluid" ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
+    <div class="container-fluid" ng-include="'scripts/components/ui/main.html'" ng-controller="MainCtrl"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -56,13 +56,13 @@
     <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
     <!-- endbower -->
     <script src="bower_components/chosen/chosen.jquery.js"></script>
+    <script src="bower_components/d3-tip/index.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/jordan_network.js"></script>
-        <script src="scripts/riken.d3js.js"></script>
-        <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/components/jordan_network/chart.js"></script>
+        <script src="scripts/components/ui/main.js"></script>
         <script src="scripts/components/slider/slider-directive.js"></script>
         <!-- endbuild -->
 </body>
