--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/src/loading-bar.css" />
+    <link rel="stylesheet" href="bower_components/angular-snap/angular-snap.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="bower_components/chosen/chosen.css" />
     <!-- endbuild -->
@@ -54,6 +55,8 @@
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
     <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
+    <script src="bower_components/snapjs/snap.js"></script>
+    <script src="bower_components/angular-snap/angular-snap.js"></script>
     <!-- endbower -->
     <script src="bower_components/chosen/chosen.jquery.js"></script>
     <script src="bower_components/d3-tip/index.js"></script>
