--- a/app/index.html
+++ b/app/index.html
@@ -8,19 +8,20 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/src/loading-bar.css" />
+    <link rel="stylesheet" href="bower_components/chosen/chosen.css" />
     <link rel="stylesheet" href="bower_components/angular-snap/angular-snap.css" />
     <!-- endbower -->
-    <link rel="stylesheet" href="bower_components/chosen/chosen.css" />
     <!-- endbuild -->
+    
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="scripts/components/ui/main.css">
-    <link rel="stylesheet" href="scripts/components/jordan_network/chart.css">
-    <link rel="stylesheet" href="scripts/components/slider/slider.css">
+    <link rel="stylesheet" href="components/ui/main.css">
+    <link rel="stylesheet" href="components/jordan_network/chart.css">
+    <link rel="stylesheet" href="components/slider/slider.css">
     <!-- endbuild -->
   </head>
   <body ng-app="lrSpaApp">
@@ -29,10 +30,10 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container-fluid" ng-include="'scripts/components/ui/main.html'" ng-controller="MainCtrl"></div>
+    <div class="container-fluid" ng-include="'components/ui/main.html'" ng-controller="MainCtrl"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
+    <!-- script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -40,7 +41,7 @@
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
-    </script>
+    </script -->
 
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -54,19 +55,19 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
+    <script src="bower_components/chosen/chosen.jquery.js"></script>
     <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
     <script src="bower_components/snapjs/snap.js"></script>
     <script src="bower_components/angular-snap/angular-snap.js"></script>
     <!-- endbower -->
-    <script src="bower_components/chosen/chosen.jquery.js"></script>
     <script src="bower_components/d3-tip/index.js"></script>
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/components/jordan_network/chart.js"></script>
-        <script src="scripts/components/ui/main.js"></script>
-        <script src="scripts/components/slider/slider-directive.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="components/app.js"></script>
+    <script src="components/jordan_network/chart.js"></script>
+    <script src="components/ui/main.js"></script>
+    <script src="components/slider/slider-directive.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
