--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,7 @@
     <script src="bower_components/snapjs/snap.js"></script>
     <script src="bower_components/angular-snap/angular-snap.js"></script>
     <script src="bower_components/d3-tip/index.js"></script>
+    <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
