Using angular-ui

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
     <script src="bower_components/angular-snap/angular-snap.js"></script>
     <script src="bower_components/d3-tip/index.js"></script>
     <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
