--- a/app/index.html
+++ b/app/index.html
@@ -70,10 +70,12 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="components/app.js"></script>
     <script src="components/jordan_network/chart.js"></script>
+    <script src="components/tree/tree-chart.js"></script>
     <script src="components/ui/main.js"></script>
     <script src="components/ui/panel-directives.js"></script>
     <script src="components/slider/slider-directive.js"></script>
     <script src="components/jordan_network/panel-controller.js"></script>
+    <script src="components/tree/tree-controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
