--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
     <script src="components/app.js"></script>
     <script src="components/jordan_network/chart.js"></script>
     <script src="components/tree/tree-chart.js"></script>
+    <script src="http://d3js.org/d3.hive.v0.min.js"></script>
     <script src="components/ui/main.js"></script>
     <script src="components/ui/panel-directives.js"></script>
     <script src="components/slider/slider-directive.js"></script>
