Using d3-plugins for hive plot

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ng-debounce/angular-debounce.js"></script>
     <!-- endbower -->
+    <script src="bower_components/d3-plugins/hive/hive.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -72,7 +73,6 @@
     <script src="components/routes.js"></script>
     <script src="components/jordan_network/chart.js"></script>
     <script src="components/tree/tree-chart.js"></script>
-    <script src="components/tree/d3.hive.v0.js"></script>
     <script src="components/ui/main.js"></script>
     <script src="components/ui/panel-directives.js"></script>
     <script src="components/slider/slider-directive.js"></script>
