--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,8 @@
     <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ng-debounce/angular-debounce.js"></script>
+    <script src="bower_components/FileSaver/FileSaver.js"></script>
+    <script src="bower_components/angular-downloadsvg-directive/angular-downloadsvg-directive.js"></script>
     <!-- endbower -->
     <script src="bower_components/d3-plugins/hive/hive.js"></script>
     <!-- endbuild -->
