--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="components/ui/main.css">
-    <link rel="stylesheet" href="components/jordan_network/chart.css">
+    <link rel="stylesheet" href="components/force/chart.css">
     <link rel="stylesheet" href="components/slider/slider.css">
     <!-- endbuild -->
   </head>
