--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="bower_components/chosen/chosen.css" />
     <link rel="stylesheet" href="bower_components/angular-snap/angular-snap.css" />
     <!-- endbower -->
+    <link rel="stylesheet" href="bower_components/angular-growl/build/angular-growl.min.css" />
     <!-- endbuild -->
     
     <!-- build:css({.tmp,app}) styles/main.css -->
@@ -66,6 +67,8 @@
     <script src="bower_components/ng-debounce/angular-debounce.js"></script>
     <script src="bower_components/FileSaver/FileSaver.js"></script>
     <script src="bower_components/angular-downloadsvg-directive/angular-downloadsvg-directive.js"></script>
+    <script src="bower_components/angular-growl/build/angular-growl.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <!-- endbower -->
     <script src="bower_components/d3-plugins/hive/hive.js"></script>
     <!-- endbuild -->
