Moved to component

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="bower_components/angular-loading-bar/src/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/chosen/chosen.css" />
     <link rel="stylesheet" href="bower_components/angular-snap/angular-snap.css" />
+    <link rel="stylesheet" href="bower_components/angular-slider-widget/angular-slider-widget.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="bower_components/angular-growl/build/angular-growl.min.css" />
     <!-- endbuild -->
@@ -22,7 +23,6 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="components/ui/main.css">
     <link rel="stylesheet" href="components/force/chart.css">
-    <link rel="stylesheet" href="components/slider/slider.css">
     <!-- endbuild -->
   </head>
   <body ng-app="lrSpaApp">
@@ -62,13 +62,14 @@
     <script src="bower_components/angular-snap/angular-snap.js"></script>
     <script src="bower_components/d3-tip/index.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ng-debounce/angular-debounce.js"></script>
     <script src="bower_components/FileSaver/FileSaver.js"></script>
     <script src="bower_components/angular-downloadsvg-directive/angular-downloadsvg-directive.js"></script>
     <script src="bower_components/angular-growl/build/angular-growl.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-slider-widget/angular-slider-widget.js"></script>
+    <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
     <!-- endbower -->
     <script src="bower_components/d3-plugins/hive/hive.js"></script>
     <!-- endbuild -->
@@ -77,8 +78,7 @@
     <script src="components/app.js"></script>
     <script src="components/routes.js"></script>
     <script src="components/ui/main.js"></script>
-    <script src="components/ui/panel-directives.js"></script>
-    <script src="components/slider/slider-directive.js"></script>    
+    <script src="components/ui/panel-directives.js"></script>  
     <script src="components/force/force-chart.js"></script>
     <script src="components/force/force-controller.js"></script>
     <script src="components/hive/hive-chart.js"></script>
