--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-slider-widget/angular-slider-widget.js"></script>
     <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
+    <script src="bower_components/_F/_F.js"></script>
     <!-- endbower -->
     <script src="bower_components/d3-plugins/hive/hive.js"></script>
     <!-- endbuild -->
