network output, underscore, better arrows

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
     <script src="bower_components/angular-slider-widget/angular-slider-widget.js"></script>
     <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
     <script src="bower_components/_F/_F.js"></script>
+    <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <!-- endbower -->
     <script src="bower_components/d3-plugins/hive/hive.js"></script>
     <!-- endbuild -->
