Using Hypercubed/dsv

--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
     <script src="bower_components/_F/_F.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/isteven-angular-multiselect/angular-multi-select.js"></script>
+    <script src="bower_components/angular-dsv/angular-dsv.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
