--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
     <script src="bower_components/isteven-angular-multiselect/angular-multi-select.js"></script>
     <script src="bower_components/angular-dsv/angular-dsv.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-bindonce/bindonce.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
