Some refactoring of charts

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,14 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <!-- build:js({.tmp,app}) scripts/lrd3-charts.js -->
+    <script src="components/charts/core.js"></script>
+    <script src="components/charts/chart-legend-chart.js"></script>
+    <script src="components/charts/chart-legend-chart.js"></script>
+    <script src="components/charts/force-chart.js"></script>
+    <script src="components/charts/hive-chart.js"></script>
+    <!-- endbuild -->
+
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="components/app.js"></script>
     <script src="components/routes.js"></script>
@@ -85,10 +93,7 @@
     <script src="components/data/ligandReceptorData-service.js"></script>
     <script src="components/graph/graph-factory.js"></script>
     <script src="components/ui/panel-directives.js"></script>
-    <script src="components/charts/chart-legend-chart.js"></script>
-    <script src="components/charts/force-chart.js"></script>
     <script src="components/charts/force-controller.js"></script>
-    <script src="components/charts/hive-chart.js"></script>
     <script src="components/charts/hive-controller.js"></script>
     <!-- endbuild -->
 </body>
