Fixed arrows, fixed download

--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js({.tmp,app}) scripts/lrd3-charts.js -->
+    <!-- build:js({.tmp,app}) scripts/charts.js -->
     <script src="components/charts/core.js"></script>
     <script src="components/charts/chart-legend-chart.js"></script>
     <script src="components/charts/chart-legend-chart.js"></script>
@@ -86,7 +86,7 @@
     <script src="components/charts/hive-chart.js"></script>
     <!-- endbuild -->
 
-    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <!-- build:js({.tmp,app}) scripts/app.js -->
     <script src="components/app.js"></script>
     <script src="components/routes.js"></script>
     <script src="components/ui/main.js"></script>
