--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Ligand Receptor Connectome</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
