--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
     <script src="bower_components/angular-dsv/angular-dsv.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-bindonce/bindonce.js"></script>
+    <script src="bower_components/ng-context-menu/dist/ng-context-menu.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
