--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="bower_components/angular-growl/build/angular-growl.min.css" />
     <link rel="stylesheet" href="bower_components/angular-slider-widget/angular-slider-widget.css" />
     <link rel="stylesheet" href="bower_components/isteven-angular-multiselect/angular-multi-select.css" />
+    <link rel="stylesheet" href="bower_components/angular-pageslide-directive/src/angular-pageslide-directive.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -73,7 +74,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-bindonce/bindonce.js"></script>
     <script src="bower_components/ng-context-menu/dist/ng-context-menu.min.js"></script>
-    <script src="bower_components/angular-pageslide-directive/dist/angular-pageslide-directive.js"></script>
+    <script src="bower_components/angular-pageslide-directive/src/angular-pageslide-directive.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
