--- a/app/index.html
+++ b/app/index.html
@@ -16,12 +16,12 @@
     <link rel="stylesheet" href="bower_components/angular-growl/build/angular-growl.min.css" />
     <link rel="stylesheet" href="bower_components/angular-slider-widget/angular-slider-widget.css" />
     <link rel="stylesheet" href="bower_components/isteven-angular-multiselect/angular-multi-select.css" />
-    <link rel="stylesheet" href="bower_components/angular-pageslide-directive/src/angular-pageslide-directive.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="components/ui/main.css">
+    <link rel="stylesheet" href="components/ui/pageslide.css">
     <link rel="stylesheet" href="components/charts/chart.css">
     <!-- endbuild -->
   </head>
@@ -74,7 +74,6 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-bindonce/bindonce.js"></script>
     <script src="bower_components/ng-context-menu/dist/ng-context-menu.min.js"></script>
-    <script src="bower_components/angular-pageslide-directive/src/angular-pageslide-directive.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
