--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,8 @@
     <script src="bower_components/angular-bindonce/bindonce.js"></script>
     <script src="bower_components/ng-context-menu/dist/ng-context-menu.js"></script>
     <script src="bower_components/ng-grid/build/ng-grid.js"></script>
+    <script src="bower_components/marked/lib/marked.js"></script>
+    <script src="bower_components/angular-marked/angular-marked.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
