--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="bower_components/angular-slider-widget/angular-slider-widget.css" />
     <link rel="stylesheet" href="bower_components/isteven-angular-multiselect/angular-multi-select.css" />
     <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.css" />
+    <link rel="stylesheet" href="bower_components/select2/select2.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -86,6 +87,8 @@
     <script src="bower_components/ng-grid/build/ng-grid.js"></script>
     <script src="bower_components/marked/lib/marked.js"></script>
     <script src="bower_components/angular-marked/angular-marked.js"></script>
+    <script src="bower_components/select2/select2.js"></script>
+    <script src="bower_components/angular-ui-select2/src/select2.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
