--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
     <script src="bower_components/angular-marked/angular-marked.js"></script>
     <script src="bower_components/select2/select2.js"></script>
     <script src="bower_components/angular-ui-select2/src/select2.js"></script>
+    <script src="bower_components/Blob.js/Blob.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
