--- a/app/index.html
+++ b/app/index.html
@@ -91,10 +91,12 @@
     <script src="bower_components/select2/select2.js"></script>
     <script src="bower_components/angular-ui-select2/src/select2.js"></script>
     <script src="bower_components/Blob.js/Blob.js"></script>
+    <script src="bower_components/js-base64/base64.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/app.js -->
+    <script src="bower_components/ng-grid/plugins/ng-grid-flexible-height.js"></script>
     <script src="components/app.js"></script>
     <script src="components/routes.js"></script>
     <script src="components/ui/main.js"></script>
