Replaces select2 with chosen

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.css" />
     <link rel="stylesheet" href="bower_components/select2/select2.css" />
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/chosen/chosen.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -60,6 +61,8 @@
     <script src="components/charts/hive-chart.js"></script>
     <!-- endbuild -->
 
+
+
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -91,6 +94,8 @@
     <script src="bower_components/select2/select2.js"></script>
     <script src="bower_components/angular-ui-select2/src/select2.js"></script>
     <script src="bower_components/Blob.js/Blob.js"></script>
+    <script src="bower_components/chosen/chosen.jquery.js"></script>
+    <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
