Save as bookmark

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,8 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/1.2.3/ZeroClipboard.min.js"></script>
+
     <!-- build:js({.tmp,app}) scripts/charts.js -->
     <script src="components/charts/core.js"></script>
     <script src="components/charts/chart-legend-chart.js"></script>
@@ -97,6 +99,8 @@
     <script src="bower_components/js-base64/base64.js"></script>
     <script src="bower_components/chosen/chosen.jquery.js"></script>
     <script src="bower_components/angular-chosen-localytics/chosen.js"></script>
+    <script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
+    <script src="bower_components/ng-clip/dest/ng-clip.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
